if the extracted formula is not clean, fall back to the default

--- a/final_math_langchain.ipynb
+++ b/final_math_langchain.ipynb
@@ -401,18 +401,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_409684/1954609987.py:26: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
-      "  score_calculation_chain = LLMChain(llm=llm, prompt=score_calculation_prompt, verbose=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Create Formula Chains for Each Task/Formula\n",
@@ -468,7 +459,7 @@
     "        \"  - total_amount: The total amount of money owed on all loans.\\n\"\n",
     "        \"  - number_of_paid_loans: The number of loans that have already been paid off.\\n\"\n",
     "        \"  - amount_per_loan: The fixed payment amount for each paid loan.\\n\\n\"\n",
-    "        \"Provide only the arithmetic expression using the variable names exactly as defined (e.g., total_amount, number_of_paid_loans, amount_per_loan) and do not include any numeric literals as defaults.\\n\"\n",
+    "        \"Provide only the arithmetic expression using the variable names exactly as defined (e.g., total_amount, number_of_paid_loans, amount_per_loan) and do not include any numeric literals as defaults and any additional text.\\n\"\n",
     "        \"Provide only the arithmetic expression (without any additional explanation) that calculates amount_to_pay.\\n\"\n",
     "        \"For example, if total_amount=2000000, number_of_paid_loans=9, and amount_per_loan=200, output:\\n\"\n",
     "        \"    total_amount - (number_of_paid_loans * amount_per_loan)\"\n",
@@ -1598,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1734,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1749,26 +1740,26 @@
     "\n",
     "# user_input = \"سود سپردم اگه ۱۸ ماه پولم تو حساب بانکیم باشه چقدر میشه؟\"\n",
     "\n",
-    "user_input = \"من ۲۵ میلیون از بانک ملت وام گرفتم. تا الان ۱۰ میلیونش رو پرداخت کردم. چقدر دیگه باید بدم تا تسویه بشه؟\""
+    "user_input = \"من ۲۵ میلیون از بانک ملت وام گرفتم. تا الان ۱۲ تا از اقساط رو به طور کامل پرداخت کردم. چقدر دیگه باید بدم تا تسویه بشه؟\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Router output: {'question': 'من ۲۵ میلیون از بانک ملت وام گرفتم. تا الان ۱۰ میلیونش رو پرداخت کردم. چقدر دیگه باید بدم تا تسویه بشه؟', 'destination': 'loan_calculation', 'next_inputs': {'question': 'من ۲۵ میلیون از بانک ملت وام گرفتم. تا الان ۱۰ میلیونش رو پرداخت کردم. چقدر دیگه باید بدم تا تسویه بشه؟'}}\n",
+      "Router output: {'question': 'من ۲۵ میلیون از بانک ملت وام گرفتم. تا الان ۱۲ تا از اقساط رو به طور کامل پرداخت کردم. چقدر دیگه باید بدم تا تسویه بشه؟', 'destination': 'loan_calculation', 'next_inputs': {'question': 'من ۲۵ میلیون از بانک ملت وام گرفتم. تا الان ۱۲ تا از اقساط رو به طور کامل پرداخت کردم. چقدر دیگه باید بدم تا تسویه بشه؟'}}\n",
       "Selected destination: loan_calculation\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3mLoan Calculation Expert:\n",
-      "For the question: من ۲۵ میلیون از بانک ملت وام گرفتم. تا الان ۱۰ میلیونش رو پرداخت کردم. چقدر دیگه باید بدم تا تسویه بشه؟, please calculate the amount of money required to pay off all loans using the following formula:\n",
+      "For the question: من ۲۵ میلیون از بانک ملت وام گرفتم. تا الان ۱۲ تا از اقساط رو به طور کامل پرداخت کردم. چقدر دیگه باید بدم تا تسویه بشه؟, please calculate the amount of money required to pay off all loans using the following formula:\n",
       "\n",
       "    amount_to_pay = total_amount - (number_of_paid_loans * amount_per_loan)\n",
       "\n",
@@ -1784,29 +1775,20 @@
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "Raw formula output from chain:\n",
-      "To calculate the remaining amount to be paid off using the given formula, we identify:\n",
-      "\n",
-      "- `total_amount` as 25 million.\n",
-      "- The total amount already paid is 10 million.\n",
-      "\n",
-      "First, we need to determine how many loans have been paid. We can do this by dividing the total amount paid (10 million) by the amount per loan. However, since the problem does not provide a specific `amount_per_loan`, and only asks for an expression using the given formula, we will express the remaining balance directly:\n",
-      "\n",
-      "The expression for `amount_to_pay` is:\n",
-      "\n",
       "```plaintext\n",
-      "total_amount - 10000000\n",
+      "total_amount - (number_of_paid_loans * amount_per_loan)\n",
       "```\n",
-      "\n",
-      "Here, `10000000` represents the amount already paid. This simplifies to the arithmetic operation needed to find out how much remains unpaid from the original total loan of 25 million.\n",
       "Extracted arithmetic expression:\n",
-      "plaintext total_amount - 10000000\n",
+      "plaintext total_amount - (number_of_paid_loans * amount_per_loan)\n",
+      "Final cleaned arithmetic expression:\n",
+      "plaintext total_amount - (number_of_paid_loans * amount_per_loan)\n",
       "Required parameters: ['total_amount', 'number_of_paid_loans', 'amount_per_loan']\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3mGiven the following user input for loan calculation:\n",
-      "\"من ۲۵ میلیون از بانک ملت وام گرفتم. تا الان ۱۰ میلیونش رو پرداخت کردم. چقدر دیگه باید بدم تا تسویه بشه؟\"\n",
+      "\"من ۲۵ میلیون از بانک ملت وام گرفتم. تا الان ۱۲ تا از اقساط رو به طور کامل پرداخت کردم. چقدر دیگه باید بدم تا تسویه بشه؟\"\n",
       "\n",
       "Extract the following parameters as a JSON object:\n",
       "- total_amount: The total amount of money owed on all loans.\n",
@@ -1823,29 +1805,33 @@
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "Parameter extraction result from LLM chain:\n",
-      "To extract the required parameters from the given user input in Farsi (Persian), we need to interpret the details provided:\n",
+      "To extract the required parameters from the user input and represent them in a JSON object, let's analyze the provided information:\n",
       "\n",
-      "1. **Total Amount Owed**: The user mentions borrowing ۲۵ میلیون (25 million) and having paid off ۱۰ میلیون (10 million). Therefore, the total amount still owed is ۲۵ میلیون - ۱۰ میلیون = ۱۵ میلیون (15 million).\n",
+      "1. **Total Amount Owed**: The user mentions they took a loan of \"۲۵ میلیون\" (25 million). This indicates the total amount borrowed.\n",
       "\n",
-      "2. **Number of Paid Loans**: The user input does not mention any specific number of loans paid off, only the total amount that has been repaid.\n",
+      "2. **Number of Paid Installments**: The user states they have paid \"۱۲ تا از اقساط\" (12 installments) in full. However, this doesn't directly indicate how many loans are fully paid off; it just shows that 12 installments have been completed.\n",
       "\n",
-      "3. **Amount per Loan**: Similarly, there is no information provided about how many payments were made or what each payment was for individual loans.\n",
+      "3. **Amount Per Loan**: There is no specific mention of the amount per loan or installment in the user input. Thus, we cannot determine this value from the given information.\n",
       "\n",
-      "Given this analysis, we can construct the JSON object as follows:\n",
+      "Based on the analysis:\n",
+      "\n",
+      "- **total_amount** can be set to 25 million.\n",
+      "- **number_of_paid_loans** is not explicitly mentioned, so it remains `null`.\n",
+      "- **amount_per_loan** is not provided, so it also remains `null`.\n",
+      "\n",
+      "Here's how you would represent this in a JSON object:\n",
       "\n",
       "```json\n",
       "{\n",
-      "  \"total_amount\": 15000000,\n",
+      "  \"total_amount\": 25000000,\n",
       "  \"number_of_paid_loans\": null,\n",
       "  \"amount_per_loan\": null\n",
       "}\n",
       "```\n",
       "\n",
-      "Explanation:\n",
-      "- **Total Amount**: Calculated as the difference between the borrowed amount and the paid amount, resulting in 15 million.\n",
-      "- **Number of Paid Loans** and **Amount per Loan**: Both are set to `null` because there is no specific information provided about these parameters.\n",
-      "Provided parameters (from LLM extraction): {'total_amount': 15000000, 'number_of_paid_loans': None, 'amount_per_loan': None}\n",
-      "Final parameters for evaluation: {'total_amount': 15000000, 'number_of_paid_loans': 1.0, 'amount_per_loan': 15000.0}\n"
+      "This JSON object reflects the extracted information with missing parameters set to `null`.\n",
+      "Provided parameters (from LLM extraction): {'total_amount': 25000000, 'number_of_paid_loans': None, 'amount_per_loan': None}\n",
+      "Final parameters for evaluation: {'total_amount': 25000000, 'number_of_paid_loans': 12.0, 'amount_per_loan': 1500000.0}\n"
      ]
     },
     {
@@ -1855,11 +1841,11 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mSyntaxError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 58\u001b[39m\n\u001b[32m     57\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m58\u001b[39m     result_value = \u001b[38;5;28;43meval\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mformula_str\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprovided_params\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     59\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 92\u001b[39m\n\u001b[32m     91\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m92\u001b[39m     result_value = \u001b[38;5;28;43meval\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mformula_str\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprovided_params\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     93\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
       "\u001b[31mSyntaxError\u001b[39m: invalid syntax (<string>, line 1)",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 60\u001b[39m\n\u001b[32m     58\u001b[39m     result_value = \u001b[38;5;28meval\u001b[39m(formula_str, provided_params)\n\u001b[32m     59\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m---> \u001b[39m\u001b[32m60\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mError evaluating the formula: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     62\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(result_value, \u001b[38;5;28mfloat\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m result_value != \u001b[38;5;28mint\u001b[39m(result_value):\n\u001b[32m     63\u001b[39m     result_value = \u001b[38;5;28mround\u001b[39m(result_value, \u001b[32m2\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 94\u001b[39m\n\u001b[32m     92\u001b[39m     result_value = \u001b[38;5;28meval\u001b[39m(formula_str, provided_params)\n\u001b[32m     93\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m---> \u001b[39m\u001b[32m94\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mError evaluating the formula: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     96\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(result_value, \u001b[38;5;28mfloat\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m result_value != \u001b[38;5;28mint\u001b[39m(result_value):\n\u001b[32m     97\u001b[39m     result_value = \u001b[38;5;28mround\u001b[39m(result_value, \u001b[32m2\u001b[39m)\n",
       "\u001b[31mRuntimeError\u001b[39m: Error evaluating the formula: invalid syntax (<string>, line 1)"
      ]
     }
@@ -1889,6 +1875,40 @@
     "formula_str = extract_arithmetic_expression(raw_formula_str)\n",
     "print(\"Extracted arithmetic expression:\")\n",
     "print(formula_str)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################################################################\n",
+    "## Fallback formula\n",
+    "import re\n",
+    "\n",
+    "# Define fallback formulas for each destination.\n",
+    "fallback_formula_map = {\n",
+    "    \"loan_calculation\": \"total_amount - (number_of_paid_loans * amount_per_loan)\",\n",
+    "    \"score_calculation\": \"math.sqrt(amount_of_income * month_of_income) - ((years_in_bank)**3 / age)\",\n",
+    "    \"interest_calculation\": \"((deposit_amount * months) / 12) * 0.25\"\n",
+    "}\n",
+    "\n",
+    "# Define a regex pattern that matches a clean arithmetic expression.\n",
+    "# This pattern allows letters (including underscores), digits, dot, plus, minus, asterisk, slash, parentheses, and whitespace.\n",
+    "allowed_pattern = r\"^[\\w\\.\\+\\-\\*/\\(\\)\\s]+$\"\n",
+    "\n",
+    "# For all formulas, if the extracted formula is not clean, fall back to the default.\n",
+    "if destination in fallback_formula_map:\n",
+    "    if not re.match(allowed_pattern, formula_str):\n",
+    "        print(\"Extracted formula is not clean. Falling back to default expression.\")\n",
+    "        formula_str = fallback_formula_map[destination]\n",
+    "\n",
+    "print(\"Final cleaned arithmetic expression:\")\n",
+    "print(formula_str)\n",
+    "\n",
+    "\n",
+    "\n",
+    "####################################################################\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# Step 3: Determine required parameters for the selected destination.\n",
     "required_params = formula_required_params.get(destination, [])\n",
