match with any code block like "plaintext"

--- a/final_math_langchain.ipynb
+++ b/final_math_langchain.ipynb
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,24 +1606,26 @@
     "    Extract a valid arithmetic expression from the LLM chain output.\n",
     "    \n",
     "    This function attempts to:\n",
-    "      1. Find a triple-backtick code block (optionally labeled \"python\"),\n",
-    "         remove any import lines, join remaining lines, and clean up escape sequences.\n",
-    "      2. If no code block is found, try to locate a LaTeX math block delimited by \\[ and \\].\n",
-    "      3. As a fallback, iterate over lines to find one that looks like an arithmetic expression.\n",
+    "      1. Find a triple-backtick code block (optionally labeled with any word),\n",
+    "         remove any import lines, and join remaining lines.\n",
+    "      2. Then, take only the first non-empty line of the code block as the expression.\n",
+    "      3. If not found, try to locate a LaTeX math block delimited by \\[ and \\].\n",
+    "      4. As a fallback, iterate over lines to find one that looks like an arithmetic expression.\n",
     "    \"\"\"\n",
-    "    # Try to extract a triple-backtick code block.\n",
-    "    code_block_match = re.search(r\"```(?:python)?\\s*(.*?)```\", text, re.DOTALL)\n",
+    "    # Try to extract a triple-backtick code block for any language.\n",
+    "    code_block_match = re.search(r\"```(?:\\w+)?\\s*(.*?)```\", text, re.DOTALL)\n",
     "    if code_block_match:\n",
     "        code = code_block_match.group(1).strip()\n",
-    "        # Remove any lines starting with \"import\"\n",
-    "        lines = code.splitlines()\n",
-    "        filtered_lines = [line for line in lines if not line.strip().startswith(\"import\")]\n",
-    "        code = \" \".join(filtered_lines).strip()\n",
-    "        # Replace any backslash-underscore with underscore.\n",
-    "        code = code.replace(r\"\\_\", \"_\")\n",
-    "        return code\n",
-    "\n",
-    "    # If not found, try to extract a LaTeX math block.\n",
+    "        # Remove lines starting with \"import\"\n",
+    "        lines = [line for line in code.splitlines() if not line.strip().startswith(\"import\")]\n",
+    "        # Take only the first non-empty line.\n",
+    "        for line in lines:\n",
+    "            clean_line = line.strip()\n",
+    "            if clean_line:\n",
+    "                # Replace any backslash-underscore with underscore.\n",
+    "                clean_line = clean_line.replace(r\"\\_\", \"_\")\n",
+    "                return clean_line\n",
+    "    # Try to extract a LaTeX math block.\n",
     "    latex_match = re.search(r\"\\\\\\[(.*?)\\\\\\]\", text, re.DOTALL)\n",
     "    if latex_match:\n",
     "        expr = latex_match.group(1)\n",
@@ -1635,8 +1637,7 @@
     "        expr = expr.replace(\"{\", \"\").replace(\"}\", \"\")\n",
     "        expr = re.sub(r\"\\\\_\", \"_\", expr)\n",
     "        return expr\n",
-    "\n",
-    "    # Fallback: iterate over lines, skip lines starting with \"import\" or code fences.\n",
+    "    # Fallback: iterate over lines.\n",
     "    for line in text.splitlines():\n",
     "        line = line.strip()\n",
     "        if line.startswith(\"import\") or line.startswith(\"```\"):\n",
@@ -1645,6 +1646,7 @@
     "        if re.match(r\"^[\\d\\w\\.\\+\\-\\*/\\(\\)\\s]+$\", line_clean):\n",
     "            return line_clean\n",
     "    return text\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -1673,22 +1675,6 @@
     "            raise ValueError(f\"Error parsing extraction result: {e2}\")\n",
     "\n",
     "\n",
-    "\n",
-    "# def parse_extraction_result(result_str: str) -> dict:\n",
-    "#     \"\"\"\n",
-    "#     Extract the JSON object from the LLM output.\n",
-    "#     This function finds the first '{' and the last '}' and parses that substring.\n",
-    "#     \"\"\"\n",
-    "#     start = result_str.find('{')\n",
-    "#     end = result_str.rfind('}') + 1\n",
-    "#     if start == -1 or end == -1:\n",
-    "#         raise ValueError(\"No JSON object found in the output.\")\n",
-    "#     json_str = result_str[start:end]\n",
-    "#     try:\n",
-    "#         return json.loads(json_str)\n",
-    "#     except Exception as e:\n",
-    "#         raise ValueError(f\"Error parsing JSON: {e}\")\n",
-    "\n",
     "def fill_or_override_parameters(provided_params: dict, required_params: list) -> dict:\n",
     "    \"\"\"\n",
     "    For each required parameter, if a value exists, ask the user if they want to override it.\n",
@@ -1711,21 +1697,12 @@
     "                except ValueError:\n",
     "                    raise ValueError(f\"Invalid value provided for {param}.\")\n",
     "    return provided_params\n",
-    "\n",
-    "# ----------------------------------------------------------------------------\n",
-    "# Assume these components are defined:\n",
-    "# - router_chain: chain to select the formula chain.\n",
-    "# - destination_chains: dict mapping destination to formula chain.\n",
-    "# - formula_required_params: dict mapping destination to list of parameter names.\n",
-    "# - extraction_chains: dict mapping destination to dedicated parameter extraction chains.\n",
-    "# ----------------------------------------------------------------------------\n",
-    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1745,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1775,13 +1752,11 @@
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "Raw formula output from chain:\n",
-      "```plaintext\n",
       "total_amount - (number_of_paid_loans * amount_per_loan)\n",
-      "```\n",
       "Extracted arithmetic expression:\n",
-      "plaintext total_amount - (number_of_paid_loans * amount_per_loan)\n",
+      "total_amount - (number_of_paid_loans * amount_per_loan)\n",
       "Final cleaned arithmetic expression:\n",
-      "plaintext total_amount - (number_of_paid_loans * amount_per_loan)\n",
+      "total_amount - (number_of_paid_loans * amount_per_loan)\n",
       "Required parameters: ['total_amount', 'number_of_paid_loans', 'amount_per_loan']\n",
       "\n",
       "\n",
@@ -1805,53 +1780,32 @@
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "Parameter extraction result from LLM chain:\n",
-      "To extract the required parameters from the user input and represent them in a JSON object, let's analyze the provided information:\n",
+      "To extract the parameters from the given user input for loan calculation, we need to analyze the sentence and identify any specific numbers or information provided.\n",
       "\n",
-      "1. **Total Amount Owed**: The user mentions they took a loan of \"۲۵ میلیون\" (25 million). This indicates the total amount borrowed.\n",
+      "1. **Total Amount**: The total amount of money owed is mentioned as \"۲۵ میلیون\" which translates to 25 million. Therefore, `total_amount` should be set to 25000000 (since 1 million = 1000000).\n",
       "\n",
-      "2. **Number of Paid Installments**: The user states they have paid \"۱۲ تا از اقساط\" (12 installments) in full. However, this doesn't directly indicate how many loans are fully paid off; it just shows that 12 installments have been completed.\n",
+      "2. **Number of Paid Loans**: It states that the user has paid \"۱۲ تا از اقساط\", which means they have completed payments for 12 installments or loans.\n",
       "\n",
-      "3. **Amount Per Loan**: There is no specific mention of the amount per loan or installment in the user input. Thus, we cannot determine this value from the given information.\n",
+      "3. **Amount Per Loan**: The input does not specify a fixed payment amount per loan, so `amount_per_loan` should be set to null.\n",
       "\n",
-      "Based on the analysis:\n",
-      "\n",
-      "- **total_amount** can be set to 25 million.\n",
-      "- **number_of_paid_loans** is not explicitly mentioned, so it remains `null`.\n",
-      "- **amount_per_loan** is not provided, so it also remains `null`.\n",
-      "\n",
-      "Here's how you would represent this in a JSON object:\n",
+      "Based on this analysis, the JSON object will look like this:\n",
       "\n",
       "```json\n",
       "{\n",
       "  \"total_amount\": 25000000,\n",
-      "  \"number_of_paid_loans\": null,\n",
+      "  \"number_of_paid_loans\": 12,\n",
       "  \"amount_per_loan\": null\n",
       "}\n",
       "```\n",
-      "\n",
-      "This JSON object reflects the extracted information with missing parameters set to `null`.\n",
-      "Provided parameters (from LLM extraction): {'total_amount': 25000000, 'number_of_paid_loans': None, 'amount_per_loan': None}\n",
-      "Final parameters for evaluation: {'total_amount': 25000000, 'number_of_paid_loans': 12.0, 'amount_per_loan': 1500000.0}\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Error evaluating the formula: invalid syntax (<string>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mSyntaxError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 92\u001b[39m\n\u001b[32m     91\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m92\u001b[39m     result_value = \u001b[38;5;28;43meval\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mformula_str\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprovided_params\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     93\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "\u001b[31mSyntaxError\u001b[39m: invalid syntax (<string>, line 1)",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 94\u001b[39m\n\u001b[32m     92\u001b[39m     result_value = \u001b[38;5;28meval\u001b[39m(formula_str, provided_params)\n\u001b[32m     93\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m---> \u001b[39m\u001b[32m94\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mError evaluating the formula: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     96\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(result_value, \u001b[38;5;28mfloat\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m result_value != \u001b[38;5;28mint\u001b[39m(result_value):\n\u001b[32m     97\u001b[39m     result_value = \u001b[38;5;28mround\u001b[39m(result_value, \u001b[32m2\u001b[39m)\n",
-      "\u001b[31mRuntimeError\u001b[39m: Error evaluating the formula: invalid syntax (<string>, line 1)"
+      "Provided parameters (from LLM extraction): {'total_amount': 25000000, 'number_of_paid_loans': 12, 'amount_per_loan': None}\n",
+      "Final parameters for evaluation: {'total_amount': 25000000, 'number_of_paid_loans': 12, 'amount_per_loan': 500000.0}\n",
+      "Answer: 19000000\n"
      ]
     }
    ],
    "source": [
-    "# Step 1: Use the router chain to decide which formula chain to use.\n",
+    "\n",
+    "# Step 1: Use the router chain.\n",
     "router_result = router_chain({\"question\": user_input})\n",
     "destination = router_result[\"destination\"]\n",
     "next_inputs = router_result[\"next_inputs\"]\n",
@@ -1875,8 +1829,6 @@
     "formula_str = extract_arithmetic_expression(raw_formula_str)\n",
     "print(\"Extracted arithmetic expression:\")\n",
     "print(formula_str)\n",
-    "\n",
-    "\n",
     "\n",
     "#################################################################\n",
     "## Fallback formula\n",
@@ -1906,15 +1858,11 @@
     "\n",
     "####################################################################\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Step 3: Determine required parameters for the selected destination.\n",
+    "# Step 3: Determine required parameters.\n",
     "required_params = formula_required_params.get(destination, [])\n",
     "print(\"Required parameters:\", required_params)\n",
     "\n",
-    "# Use the dedicated extraction chain for this destination to extract parameters.\n",
+    "# Use the dedicated extraction chain for parameters.\n",
     "extraction_chains = {\n",
     "    \"interest_calculation\": interest_extraction_chain,\n",
     "    \"score_calculation\": score_extraction_chain,\n",
@@ -1934,13 +1882,12 @@
     "\n",
     "print(\"Provided parameters (from LLM extraction):\", provided_params)\n",
     "\n",
-    "# Step 4: Ask the user for missing parameters or override the defaults.\n",
+    "# Step 4: Ask the user to fill or override parameters.\n",
     "provided_params = fill_or_override_parameters(provided_params, required_params)\n",
     "print(\"Final parameters for evaluation:\", provided_params)\n",
     "\n",
     "# Step 5: Evaluate the formula.\n",
     "provided_params['math'] = math  # Make math module available.\n",
-    "\n",
     "try:\n",
     "    result_value = eval(formula_str, provided_params)\n",
     "except Exception as e:\n",
@@ -1951,7 +1898,8 @@
     "else:\n",
     "    result_value = int(result_value)\n",
     "\n",
-    "print(f\"Answer: {result_value}\")"
+    "print(f\"Answer: {result_value}\")\n",
+    "\n"
    ]
   },
   {
